--- a/index.html
+++ b/index.html
@@ -111,10 +111,16 @@ h1 {
   width: 100%;
   height: 100%;
   background: rgba(11,13,18,0.85);
-  display: flex;
   align-items: center;
   justify-content: center;
   z-index: 1000;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.modal.show {
+  display: flex;
+  opacity: 1;
 }
 
 .modal-content {
@@ -126,6 +132,12 @@ h1 {
   position: relative;
   box-shadow: 0 10px 30px rgba(0,0,0,0.6);
   text-align: left;
+  transform: scale(0.8);
+  transition: transform 0.3s ease;
+}
+
+.modal.show .modal-content {
+  transform: scale(1);
 }
 
 .modal-content h2 {
@@ -181,7 +193,7 @@ h1 {
       <span>Maintenance</span>
     </div>
     <div class="icon-box" onclick="openModal('eventsModal')">
-      <i class="fas fa-party-hat"></i> <!-- Party hat for events -->
+      <i class="fas fa-cake-candles"></i> <!-- party vibe -->
       <span>Events</span>
     </div>
     <div class="icon-box" onclick="openModal('updatesModal')">
@@ -229,19 +241,27 @@ h1 {
 </div>
 
 <script>
+document.addEventListener('DOMContentLoaded', () => {
+  // ensure all modals hidden on load
+  const modals = document.querySelectorAll('.modal');
+  modals.forEach(m => m.classList.remove('show'));
+});
+
 function openModal(id) {
-  document.getElementById(id).style.display = 'flex';
+  const modal = document.getElementById(id);
+  modal.classList.add('show');
 }
 
 function closeModal(id) {
-  document.getElementById(id).style.display = 'none';
+  const modal = document.getElementById(id);
+  modal.classList.remove('show');
 }
 
-// Optional: close modal when clicking outside content
+// close modal when clicking outside content
 window.addEventListener('click', function(e){
   const modals = document.querySelectorAll('.modal');
   modals.forEach(modal => {
-    if(e.target === modal) modal.style.display = 'none';
+    if(e.target === modal) modal.classList.remove('show');
   });
 });
 </script>
