--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Official Abyss Wiki</title>
 <style>
 :root {
-  --bg-main: #0b0d12;
+  --bg-dark: #0b0d12;
   --bg-card: #131722;
   --accent-primary: #8a2be2;
   --accent-secondary: #00bfff;
@@ -17,9 +17,17 @@
 /* ---------- GLOBAL ---------- */
 body {
   margin: 0;
-  background: linear-gradient(180deg, #090b10, #0e1018);
-  color: var(--text-main);
   font-family: "Segoe UI", Arial, sans-serif;
+  color: var(--text-main);
+  background: linear-gradient(270deg, #0b0d12, #1a1c28, #0b0d12);
+  background-size: 600% 600%;
+  animation: gradientBG 20s ease infinite;
+}
+
+@keyframes gradientBG {
+  0% {background-position:0% 50%}
+  50% {background-position:100% 50%}
+  100% {background-position:0% 50%}
 }
 
 .container {
@@ -30,26 +38,34 @@ body {
 }
 
 h1 {
-  font-size: 46px;
+  font-size: 50px;
   color: var(--accent-primary);
   margin-bottom: 10px;
+  animation: pulse 2s infinite;
 }
 
 .server-name {
-  font-size: 22px;
+  font-size: 24px;
   color: var(--accent-secondary);
   margin-bottom: 60px;
+  animation: pulse 2s infinite alternate;
 }
 
 .about-title {
-  font-size: 30px;
-  margin-bottom: 20px;
+  font-size: 32px;
   color: var(--accent-primary);
+  margin-bottom: 20px;
+  animation: pulse 2s infinite alternate-reverse;
+}
+
+@keyframes pulse {
+  0% { text-shadow: 0 0 5px var(--accent-primary), 0 0 10px var(--accent-secondary);}
+  50% { text-shadow: 0 0 15px var(--accent-primary), 0 0 25px var(--accent-secondary);}
+  100% { text-shadow: 0 0 5px var(--accent-primary), 0 0 10px var(--accent-secondary);}
 }
 
 .about-card {
   background: var(--bg-card);
-  border: 1px solid #222;
   border-radius: 14px;
   padding: 30px;
   margin-bottom: 60px;
@@ -61,7 +77,7 @@ h1 {
   line-height: 1.8;
 }
 
-/* ---------- ICON BOXES ---------- */
+/* ---------- ICON GRID ---------- */
 .icon-grid {
   display: flex;
   flex-wrap: wrap;
@@ -72,7 +88,6 @@ h1 {
 
 .icon-box {
   background: var(--bg-card);
-  border: 1px solid #222;
   border-radius: 16px;
   width: 160px;
   height: 160px;
@@ -83,23 +98,42 @@ h1 {
   cursor: pointer;
   box-shadow: 0 6px 20px rgba(0,0,0,0.35);
   transition: transform 0.3s, box-shadow 0.3s;
+  position: relative;
 }
 
 .icon-box:hover {
-  transform: translateY(-8px);
-  box-shadow: 0 12px 30px rgba(0,0,0,0.5);
+  transform: translateY(-10px) scale(1.05);
+  box-shadow: 0 14px 35px rgba(0,0,0,0.6);
 }
 
 .icon-box i {
   font-size: 50px;
   margin-bottom: 10px;
   color: var(--accent-secondary);
+  animation: iconFloat 3s ease-in-out infinite;
+}
+
+.icon-box:hover i {
+  animation: iconBounce 0.6s ease infinite alternate;
 }
 
 .icon-box span {
   font-size: 18px;
   color: var(--text-main);
   font-weight: bold;
+}
+
+/* icon float animation */
+@keyframes iconFloat {
+  0% { transform: translateY(0px);}
+  50% { transform: translateY(-6px);}
+  100% { transform: translateY(0px);}
+}
+
+@keyframes iconBounce {
+  0% { transform: translateY(0);}
+  50% { transform: translateY(-10px);}
+  100% { transform: translateY(0);}
 }
 
 /* ---------- MODAL ---------- */
@@ -111,6 +145,7 @@ h1 {
   width: 100%;
   height: 100%;
   background: rgba(11,13,18,0.85);
+  backdrop-filter: blur(4px);
   align-items: center;
   justify-content: center;
   z-index: 1000;
@@ -166,8 +201,16 @@ h1 {
 .close-btn:hover {
   background: var(--accent-success);
 }
+
+/* ---------- RESPONSIVE ---------- */
+@media(max-width:600px){
+  .icon-box { width: 130px; height: 130px;}
+  .icon-box i { font-size: 40px;}
+  h1 { font-size: 40px;}
+  .server-name { font-size: 20px;}
+  .about-title { font-size: 26px;}
+}
 </style>
-<!-- Font Awesome for icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -267,7 +310,6 @@ function closeModal(id) {
   document.getElementById(id).classList.remove('show');
 }
 
-// Close modal when clicking outside content
 window.addEventListener('click', function(e){
   const modals = document.querySelectorAll('.modal');
   modals.forEach(modal => {
