--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ h1 {
   <div class="modal-content">
     <button class="close-btn" onclick="closeModal('modModal')">X</button>
     <h2>Mod of the Week</h2>
-    <p>This week’s outstanding moderator is <strong>UsernameHere</strong>! 🎉
+    <p>This week’s outstanding moderator is <strong>｡ﾟ•⚔ 𝓒𝓻𝓲𝓽𝓲𝓬𝓪𝓵 ⚔•ﾟ｡</strong>! 🎉
        Thank you for keeping the server safe and fun for everyone.</p>
   </div>
 </div>
