--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ h1 {
   <div class="modal-content">
     <button class="close-btn" onclick="closeModal('eventsModal')">X</button>
     <h2>Events</h2>
-    <p>No events are running at this time.</p>
+    <p>4 Invites = 2 Shoorbino (PvB) Use this link to avail! -https://discord.com/events/1386748629842264085/1437036680119848970</p>
   </div>
 </div>
 
