--- a/index.html
+++ b/index.html
@@ -222,10 +222,7 @@ h1 {
   <div class="about-title">About The Server</div>
   <div class="about-card">
     <p>
-      Abyss Server is a dark-themed, community-driven experience focused on
-      immersive gameplay, fairness, and long-term progression.
-      Our goal is to provide a stable, engaging environment where players
-      can explore, compete, and grow together.
+     Abyss is a vibrant Discord server where you can chat, hang out, and have fun with a community of friendly members. One of the server’s highlights is a fishing game powered by a bot named Bob, who has gained legendary status among the community. Bob once soloed an entire raid, proving to everyone that he truly is the GOAT. But Abyss isn’t just about the bot—its members and staff are equally amazing, welcoming, and always ready to make your time on the server enjoyable. Whether you want to relax, play games, or meet new friends, Abyss offers a space where everyone can belong. The staff are helpful and supportive, ensuring the server remains fun and safe for all. With its lively discussions, interactive events, and the entertaining fishing game, Abyss stands out as a unique and engaging community. Every visit promises new experiences, laughter, and opportunities to connect. From casual chats to thrilling game moments, there’s something for everyone. If you’re looking for a friendly, active, and exciting server, Abyss is the place to be. We’d love for you to join and become a part of our growing family of players, friends, and enthusiasts. Don’t miss out on the fun and adventure waiting in Abyss!
     </p>
   </div>
 
