--- a/index.html
+++ b/index.html
@@ -219,21 +219,23 @@ h1 {
   background: var(--accent-secondary);
 }
 
+/* ---------- GIANT CAT ---------- */
 #giantCat {
   display: none;
   position: fixed;
   top: 50%;
   left: 50%;
-  font-size: 10rem;
+  font-size: 25rem; /* huge */
   transform: translate(-50%, -50%);
   text-align: center;
   color: #ffcc00;
   z-index: 2000;
   user-select: none;
+  transition: transform 0.3s, opacity 0.3s;
 }
 #giantCat span {
   display: block;
-  font-size: 2rem;
+  font-size: 3rem;
   color: #ffffff;
   margin-top: 20px;
 }
@@ -245,8 +247,8 @@ h1 {
   h1 { font-size: 40px;}
   .server-name { font-size: 20px;}
   .about-title { font-size: 26px;}
-  #giantCat { font-size: 6rem; }
-  #giantCat span { font-size: 1.2rem;}
+  #giantCat { font-size: 12rem; }
+  #giantCat span { font-size: 1.5rem; }
 }
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -346,12 +348,18 @@ window.addEventListener('click', e => {
 
 /* ---------- EASTER EGG ---------- */
 const giantCat = document.getElementById('giantCat');
+const eggBtn = document.querySelector('.easter-egg-btn');
+
 function showCat() {
   giantCat.style.display = 'block';
+  giantCat.style.opacity = '1';
 }
+
+// Hide cat if clicked anywhere except the cat or the button
 window.addEventListener('click', e => {
-  if(e.target !== giantCat && e.target.className !== 'easter-egg-btn') {
-    giantCat.style.display = 'none';
+  if (!giantCat.contains(e.target) && e.target !== eggBtn) {
+    giantCat.style.opacity = '0';
+    setTimeout(() => { giantCat.style.display = 'none'; }, 300); // wait for fade out
   }
 });
 </script>
