--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
 <style>
 :root {
   --bg-dark: #0b0d12;
-  --bg-card: #131722;
+  --bg-card: rgba(19, 23, 34, 0.85);
   --accent-primary: #8a2be2;
   --accent-secondary: #00bfff;
   --accent-success: #32cd32;
   --text-main: #f0f0f0;
-  --text-muted: #b0b0b0;
+  --text-muted: #c0c0c0;
+  --shadow-dark: rgba(0,0,0,0.6);
 }
 
 /* ---------- GLOBAL ---------- */
@@ -23,8 +24,8 @@ body {
   background-size: 600% 600%;
   animation: gradientBG 20s ease infinite;
   position: relative;
+  overflow-x: hidden;
 }
-
 @keyframes gradientBG {
   0% {background-position:0% 50%}
   50% {background-position:100% 50%}
@@ -36,34 +37,112 @@ body {
   margin: auto;
   padding: 80px 20px 40px;
   text-align: center;
+  position: relative;
+  z-index: 10;
 }
 
+/* ---------- PULSATING HEADINGS ---------- */
 h1 { font-size: 48px; color: var(--accent-primary); margin-bottom: 10px; animation: pulse 2s infinite; }
 .server-name { font-size: 22px; color: var(--accent-secondary); margin-bottom: 50px; animation: pulse 2s infinite alternate; }
 .about-title { font-size: 30px; color: var(--accent-primary); margin-bottom: 20px; animation: pulse 2s infinite alternate-reverse; }
-@keyframes pulse { 0% { text-shadow: 0 0 5px var(--accent-primary),0 0 10px var(--accent-secondary);} 50% { text-shadow:0 0 15px var(--accent-primary),0 0 25px var(--accent-secondary);} 100% {text-shadow:0 0 5px var(--accent-primary),0 0 10px var(--accent-secondary);} }
+@keyframes pulse {
+  0% { text-shadow: 0 0 5px var(--accent-primary),0 0 10px var(--accent-secondary);}
+  50% { text-shadow:0 0 15px var(--accent-primary),0 0 25px var(--accent-secondary);}
+  100% {text-shadow:0 0 5px var(--accent-primary),0 0 10px var(--accent-secondary);}
+}
 
-.about-card { background: var(--bg-card); border-radius: 14px; padding: 25px; margin-bottom: 50px; box-shadow: 0 8px 20px rgba(0,0,0,0.35);}
-.about-card p { color: var(--text-muted); line-height: 1.7; }
+/* ---------- ABOUT CARD ---------- */
+.about-card {
+  background: var(--bg-card);
+  backdrop-filter: blur(8px);
+  border-radius: 16px;
+  padding: 30px;
+  margin-bottom: 50px;
+  box-shadow: 0 12px 25px var(--shadow-dark);
+}
+.about-card p {
+  color: var(--text-muted);
+  line-height: 1.8;
+  font-size: 18px;
+}
 
 /* ---------- ICON GRID ---------- */
-.icon-grid { display: flex; flex-wrap: wrap; justify-content: center; gap: 25px; margin-bottom: 50px;}
-.icon-box { background: var(--bg-card); border-radius: 16px; width: 150px; height: 150px; display: flex; flex-direction: column; align-items: center; justify-content: center; cursor: pointer; box-shadow:0 5px 18px rgba(0,0,0,0.35); transition: transform 0.3s, box-shadow 0.3s; position: relative;}
-.icon-box:hover { transform: translateY(-8px) scale(1.05); box-shadow:0 12px 30px rgba(0,0,0,0.6);}
-.icon-box i { font-size:48px; margin-bottom:10px; color: var(--accent-secondary); animation: iconFloat 3s ease-in-out infinite;}
-.icon-box:hover i { animation: iconBounce 0.6s ease infinite alternate;}
-.icon-box span { font-size:18px; color: var(--text-main); font-weight:bold; }
+.icon-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 25px;
+  margin-bottom: 50px;
+}
+.icon-box {
+  background: var(--bg-card);
+  backdrop-filter: blur(8px);
+  border-radius: 18px;
+  width: 160px;
+  height: 160px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  box-shadow:0 8px 20px var(--shadow-dark);
+  transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
+  position: relative;
+}
+.icon-box:hover {
+  transform: translateY(-10px) scale(1.08);
+  box-shadow:0 15px 35px var(--shadow-dark);
+  background: linear-gradient(145deg, rgba(138,43,226,0.3), rgba(0,191,255,0.3));
+}
+.icon-box i {
+  font-size:50px;
+  margin-bottom:12px;
+  color: var(--accent-secondary);
+  animation: iconFloat 3s ease-in-out infinite;
+}
+.icon-box:hover i { animation: iconBounce 0.6s ease infinite alternate; }
+.icon-box span {
+  font-size:18px;
+  color: var(--text-main);
+  font-weight:bold;
+  letter-spacing: 0.5px;
+}
 @keyframes iconFloat {0%{transform:translateY(0);}50%{transform:translateY(-6px);}100%{transform:translateY(0);}}
 @keyframes iconBounce {0%{transform:translateY(0);}50%{transform:translateY(-10px);}100%{transform:translateY(0);}}
 
 /* ---------- MODAL ---------- */
-.modal { visibility: hidden; opacity: 0; display:flex; position:fixed; top:0; left:0; width:100%; height:100%; background:rgba(11,13,18,0.85); backdrop-filter: blur(4px); align-items:center; justify-content:center; z-index:1000; transition: opacity 0.3s ease, visibility 0.3s ease;}
+.modal {
+  visibility: hidden;
+  opacity: 0;
+  display:flex;
+  position:fixed;
+  top:0; left:0;
+  width:100%; height:100%;
+  background:rgba(11,13,18,0.9);
+  backdrop-filter: blur(6px);
+  align-items:center;
+  justify-content:center;
+  z-index:1000;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
 .modal.show { visibility: visible; opacity: 1; }
-.modal-content { background: var(--bg-card); border-radius: 14px; padding: 25px; max-width: 600px; width:90%; position: relative; box-shadow:0 8px 25px rgba(0,0,0,0.6); text-align:left; transform: scale(0.8); transition: transform 0.3s ease; }
+.modal-content {
+  background: var(--bg-card);
+  backdrop-filter: blur(8px);
+  border-radius: 16px;
+  padding: 30px;
+  max-width: 600px;
+  width:90%;
+  position: relative;
+  box-shadow:0 15px 40px var(--shadow-dark);
+  text-align:left;
+  transform: scale(0.8);
+  transition: transform 0.3s ease, box-shadow 0.3s;
+}
 .modal.show .modal-content { transform: scale(1); }
-.modal-content h2 { color: var(--accent-secondary); margin-top:0;}
-.modal-content p { color: var(--text-muted); line-height:1.7;}
-.close-btn { position:absolute; top:12px; right:15px; background: var(--accent-primary); color:white; border:none; border-radius:6px; padding:4px 10px; cursor:pointer; font-weight:bold;}
+.modal-content h2 { color: var(--accent-secondary); margin-top:0; font-size: 28px; margin-bottom: 12px; }
+.modal-content p { color: var(--text-muted); line-height:1.8; font-size:16px; }
+.close-btn { position:absolute; top:12px; right:15px; background: var(--accent-primary); color:white; border:none; border-radius:6px; padding:6px 12px; cursor:pointer; font-weight:bold; transition: background 0.3s; }
 .close-btn:hover { background: var(--accent-success); }
 
 /* ---------- GIANT CAT ---------- */
@@ -72,49 +151,44 @@ h1 { font-size: 48px; color: var(--accent-primary); margin-bottom: 10px; animati
   position: fixed;
   top: 50%;
   left: 50%;
-  font-size: 40vw; /* smaller so text fits */
+  font-size: 40vw;
   transform: translate(-50%, -50%);
   text-align: center;
   z-index: 2000;
   user-select: none;
   transition: opacity 0.3s ease;
 }
-#catText {
-  font-size: 3vw;
-  color:white;
-  margin-top:-15vw; /* move above cat emoji */
-  text-shadow: 2px 2px 5px black;
-}
+#catText { font-size: 3vw; color:white; margin-top:-15vw; text-shadow: 2px 2px 8px black; font-weight:bold; }
 
 /* ---------- HIDDEN RED BUTTON ---------- */
-#redBtn {
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  width: 2px; /* tiny invisible button */
-  height: 2px;
-  background: red;
-  border: none;
-  cursor: pointer;
-  opacity: 0.1;
-  z-index: 1000;
-}
+#redBtn { position: fixed; top: 0px; left: 0px; width: 2px; height: 2px; background: red; border: none; cursor: pointer; opacity: 0.1; z-index: 1000; }
 #redBtn:hover { opacity: 0.5; }
 
 /* ---------- RESPONSIVE ---------- */
 @media(max-width:600px){
-  .icon-box { width:130px; height:130px; }
-  .icon-box i { font-size:40px; }
-  h1 { font-size:40px; }
+  .icon-box { width:140px; height:140px; }
+  .icon-box i { font-size:42px; }
+  h1 { font-size:38px; }
   .server-name { font-size:20px; }
   .about-title { font-size:26px; }
   #giantCat { font-size:60vw; }
   #catText { font-size:5vw; margin-top:-25vw; }
 }
+
+/* ---------- FISH BACKGROUND ---------- */
+#fishContainer { position: fixed; top:0; left:0; width:100%; height:100%; pointer-events:none; z-index:1; overflow:hidden; }
+.fish { position: absolute; pointer-events:none; user-select:none; font-size:2em; animation: swim linear infinite; }
+@keyframes swim {
+  0% { transform: translateX(-10%); }
+  100% { transform: translateX(110vw); }
+}
 </style>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+
+<!-- Fish Container -->
+<div id="fishContainer"></div>
 
 <div class="container">
   <h1>OFFICIAL ABYSS WIKI</h1>
@@ -130,54 +204,29 @@ h1 { font-size: 48px; color: var(--accent-primary); margin-bottom: 10px; animati
   <!-- ICON GRID -->
   <div class="icon-grid">
     <div class="icon-box" onclick="openModal('maintenanceModal')">
-      <i class="fas fa-tools"></i>
-      <span>Maintenance</span>
+      <i class="fas fa-tools"></i><span>Maintenance</span>
     </div>
     <div class="icon-box" onclick="openModal('eventsModal')">
-      <i class="fas fa-cake-candles"></i>
-      <span>Events</span>
+      <i class="fas fa-cake-candles"></i><span>Events</span>
     </div>
     <div class="icon-box" onclick="openModal('updatesModal')">
-      <i class="fas fa-arrow-up-right-dots"></i>
-      <span>Updates</span>
+      <i class="fas fa-arrow-up-right-dots"></i><span>Updates</span>
     </div>
     <div class="icon-box" onclick="openModal('staffModal')">
-      <i class="fas fa-user-shield"></i>
-      <span>Staff</span>
+      <i class="fas fa-user-shield"></i><span>Staff</span>
     </div>
     <div class="icon-box" onclick="openModal('modModal')">
-      <i class="fas fa-crown"></i>
-      <span>Mod of the Week</span>
+      <i class="fas fa-crown"></i><span>Mod of the Week</span>
     </div>
   </div>
 </div>
 
 <!-- MODALS -->
-<div class="modal" id="maintenanceModal">
-  <div class="modal-content"><button class="close-btn" onclick="closeModal('maintenanceModal')">X</button>
-    <h2>Maintenance</h2><p>No maintenance is currently scheduled.</p>
-  </div>
-</div>
-<div class="modal" id="eventsModal">
-  <div class="modal-content"><button class="close-btn" onclick="closeModal('eventsModal')">X</button>
-    <h2>Events</h2><p>4 Invites = 2 Shoorbino (PvB) Use this link to avail! -https://discord.com/events/1386748629842264085/1437036680119848970</p>
-  </div>
-</div>
-<div class="modal" id="updatesModal">
-  <div class="modal-content"><button class="close-btn" onclick="closeModal('updatesModal')">X</button>
-    <h2>Updates</h2><p>No updates are available right now.</p>
-  </div>
-</div>
-<div class="modal" id="staffModal">
-  <div class="modal-content"><button class="close-btn" onclick="closeModal('staffModal')">X</button>
-    <h2>Staff Applications</h2><p>Staff applications are currently closed.</p>
-  </div>
-</div>
-<div class="modal" id="modModal">
-  <div class="modal-content"><button class="close-btn" onclick="closeModal('modModal')">X</button>
-    <h2>Mod of the Week</h2><p>This week’s outstanding moderator is <strong>｡ﾟ•⚔ 𝓒𝓻𝓲𝓽𝓲𝓬𝓪𝓵 ⚔•ﾟ｡</strong>! 🎉 Thank you for keeping the server safe and fun for everyone.</p>
-  </div>
-</div>
+<div class="modal" id="maintenanceModal"><div class="modal-content"><button class="close-btn" onclick="closeModal('maintenanceModal')">X</button><h2>Maintenance</h2><p>No maintenance is currently scheduled.</p></div></div>
+<div class="modal" id="eventsModal"><div class="modal-content"><button class="close-btn" onclick="closeModal('eventsModal')">X</button><h2>Events</h2><p>4 Invites = 2 Shoorbino (PvB) Use this link to avail! -https://discord.com/events/1386748629842264085/1437036680119848970</p></div></div>
+<div class="modal" id="updatesModal"><div class="modal-content"><button class="close-btn" onclick="closeModal('updatesModal')">X</button><h2>Updates</h2><p>No updates are available right now.</p></div></div>
+<div class="modal" id="staffModal"><div class="modal-content"><button class="close-btn" onclick="closeModal('staffModal')">X</button><h2>Staff Applications</h2><p>Staff applications are currently closed.</p></div></div>
+<div class="modal" id="modModal"><div class="modal-content"><button class="close-btn" onclick="closeModal('modModal')">X</button><h2>Mod of the Week</h2><p>This week’s outstanding moderator is <strong>｡ﾟ•⚔ 𝓒𝓻𝓲𝓽𝓲𝓬𝓪𝓵 ⚔•ﾟ｡</strong>! 🎉 Thank you for keeping the server safe and fun for everyone.</p></div></div>
 
 <!-- GIANT CAT -->
 <div id="giantCat">🐱<div id="catText">Lemme play fisch with my cat friends</div></div>
@@ -193,26 +242,24 @@ window.addEventListener('click', e => { if(e.target.classList.contains('modal'))
 
 /* ---------- GIANT CAT ---------- */
 const giantCat = document.getElementById('giantCat');
+function showCat() { giantCat.style.display = 'block'; giantCat.style.opacity = '1'; }
+window.addEventListener('click', e => { if(!giantCat.contains(e.target) && e.target.id !== 'redBtn') { giantCat.style.opacity='0'; setTimeout(()=>{ giantCat.style.display='none'; },300); } });
+document.getElementById('redBtn').addEventListener('click', e=>{ e.stopPropagation(); showCat(); });
 
-function showCat() {
-  giantCat.style.display = 'block';
-  giantCat.style.opacity = '1';
+/* ---------- SWIMMING FISH ---------- */
+const fishContainer = document.getElementById('fishContainer');
+const fishEmojis = ['🐟','🐠','🐡','🦈'];
+const fishCount = 15;
+
+for(let i=0;i<fishCount;i++){
+  const fish = document.createElement('div');
+  fish.classList.add('fish');
+  fish.textContent = fishEmojis[Math.floor(Math.random()*fishEmojis.length)];
+  fish.style.top = Math.random()*90 + 'vh';
+  fish.style.fontSize = (20 + Math.random()*30) + 'px';
+  fish.style.animationDuration = (12 + Math.random()*18) + 's';
+  fishContainer.appendChild(fish);
 }
-
-// Click anywhere outside cat hides it
-window.addEventListener('click', e => {
-  if (!giantCat.contains(e.target) && e.target.id !== 'redBtn') {
-    giantCat.style.opacity = '0';
-    setTimeout(()=>{ giantCat.style.display='none'; }, 300);
-  }
-});
-
-// Hidden red button triggers cat
-const redBtn = document.getElementById('redBtn');
-redBtn.addEventListener('click', e => {
-  e.stopPropagation(); // prevent window click from hiding immediately
-  showCat();
-});
 </script>
 </body>
 </html>
