--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@ body {
   color: var(--text-main);
   background: linear-gradient(180deg, #0b111c 0%, #00111f 100%);
   overflow-x: hidden;
-  position: relative;
-  min-height:200vh; /* allows scrolling to enjoy fish */
+  min-height:200vh; /* so you can scroll and enjoy fish */
 }
 
 .container { max-width: 1000px; margin:auto; padding:80px 20px 40px; text-align:center; position: relative; z-index: 10; }
@@ -74,17 +73,17 @@ h1 { font-size:48px; color: var(--accent-primary); margin-bottom:10px; animation
 #catText{font-size:3vw;color:white;margin-top:-15vw;text-shadow:2px 2px 8px black;font-weight:bold;}
 
 /* ---------- FISH ---------- */
-#fishContainer{position:fixed; inset:0; pointer-events:none; z-index:1;}
+#fishContainer{position:fixed; top:0; left:0; width:100%; height:calc(100vh - 20px); pointer-events:none; z-index:1;} /* don't go under sand */
 .fish{position:absolute; user-select:none; pointer-events:none;}
-.fish.octopus{pointer-events:auto; cursor:pointer; filter:drop-shadow(0 0 12px purple);}
+.fish.octopus{
+  pointer-events:auto; 
+  cursor:pointer; 
+  filter: drop-shadow(0 0 8px red) drop-shadow(0 0 8px purple);
+}
 
 /* ---------- SEAWEED & SAND ---------- */
 #seaweed { position:fixed; bottom:0; left:0; width:100%; height:30vh; pointer-events:auto; z-index:0; font-size:4vw; display:flex; justify-content:space-around; align-items:flex-end; }
-.seaweed{animation: sway 4s ease-in-out infinite alternate;}
-
-/* Only first seaweed is clickable */
-#seaweed .seaweed:first-child { cursor:pointer; }
-
+.seaweed{animation: sway 4s ease-in-out infinite alternate; cursor:pointer;}
 @keyframes sway{0%{transform:translateY(0) rotate(-2deg);}100%{transform:translateY(-5px) rotate(2deg);}}
 #sand{position:fixed; bottom:0; left:0; width:100%; height:20px; background:linear-gradient(to top, #c2b280, transparent); z-index:2;}
 
@@ -165,7 +164,7 @@ const fishEmojis = [
 
 function spawnFishCluster(){
   const clusterSize = Math.floor(Math.random()*4)+3;
-  const startTop = Math.random()*70+10;
+  const startTop = Math.random()*70; // so fish stay above sand
   for(let i=0;i<clusterSize;i++){
     const f = fishEmojis[Math.floor(Math.random()*fishEmojis.length)];
     const fish = document.createElement('div');
@@ -186,7 +185,7 @@ function animateFish(fish){
   function step(){
     left -= speed;
     fish.style.left = left+'px';
-    fish.style.top = parseFloat(fish.style.top) + Math.sin(t*swayFrequency)*swayAmplitude*0.02 + 'vh';
+    fish.style.top = parseFloat(fish.style.top) + Math.sin(t*swayFrequency)*swayAmplitude*0.01 + 'vh';
     t++;
     if(left> -100) requestAnimationFrame(step);
     else fish.remove();
@@ -196,21 +195,36 @@ function animateFish(fish){
 spawnFishCluster();
 setInterval(spawnFishCluster,4000);
 
-/* ---------- SEAWEED PASSWORD (only first) ---------- */
-const firstSeaweed = document.querySelector('#seaweed .seaweed:first-child');
-firstSeaweed.addEventListener('click', ()=>{
+/* ---------- SEAWEED PASSWORD ---------- */
+const seaweeds = document.querySelectorAll('.seaweed');
+seaweeds[0].addEventListener('click',()=>{
   const pass = prompt("Admin Find: Enter Password");
   if(pass === "67468"){
     const octo = document.createElement('div');
     octo.className='fish octopus';
     octo.textContent='🐙';
-    octo.style.top=(Math.random()*70+10)+'vh';
+    octo.style.top=(Math.random()*70)+'vh';
     octo.style.fontSize='60px';
     octo.onclick=e=>{ e.stopPropagation(); openModal('loreModal'); octo.remove();}
     fishContainer.appendChild(octo);
     animateFish(octo);
   } else { alert("Incorrect password"); }
 });
+
+/* ---------- RANDOM ABYSSAL OCTOPUS ---------- */
+function spawnAbyssalOctopus(){
+  if(Math.random()<0.005){ // 0.5% every 5s
+    const octo = document.createElement('div');
+    octo.className='fish octopus';
+    octo.textContent='🐙';
+    octo.style.top=(Math.random()*70)+'vh';
+    octo.style.fontSize='60px';
+    octo.onclick=e=>{ e.stopPropagation(); openModal('loreModal'); octo.remove();}
+    fishContainer.appendChild(octo);
+    animateFish(octo);
+  }
+}
+setInterval(spawnAbyssalOctopus,5000);
 
 /* ---------- CRAB & LOBSTER WALK ---------- */
 const crabContainer = document.getElementById('crabContainer');
