--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ Abyss is a friendly Discord server where you can chat, hang out, and have fun. I
 <!-- Modals -->
 <div class="modal" id="maintenanceModal"><div class="modal-content"><button class="close-btn" onclick="closeModal('maintenanceModal')">X</button><h2>Maintenance</h2><p>No maintenance is currently scheduled.</p></div></div>
 <div class="modal" id="eventsModal"><div class="modal-content"><button class="close-btn" onclick="closeModal('eventsModal')">X</button><h2>Events</h2><p>4 Invites = 2 Shoorbino (PvB) Use this link to avail! -https://discord.com/events/1386748629842264085/1437036680119848970</p></div></div>
-<div class="modal" id="updatesModal"><div class="modal-content"><button class="close-btn" onclick="closeModal('updatesModal')">X</button><h2>Updates</h2><p>No updates are available right now.</p></div></div>
+<div class="modal" id="updatesModal"><div class="modal-content"><button class="close-btn" onclick="closeModal('updatesModal')">X</button><h2>Updates</h2><p>News Update- 67 now banned in schools!!!.</p></div></div>
 <div class="modal" id="staffModal"><div class="modal-content"><button class="close-btn" onclick="closeModal('staffModal')">X</button><h2>Staff Applications</h2><p>Staff applications are currently closed.</p></div></div>
 <div class="modal" id="modModal"><div class="modal-content"><button class="close-btn" onclick="closeModal('modModal')">X</button><h2>Mod of the Week</h2><p>This week’s outstanding moderator is <strong>｡ﾟ•⚔ 𝓒𝓻𝓲𝓽𝓲𝓬𝓪𝓵 ⚔•ﾟ｡</strong>! 🎉 Thank you for keeping the server safe and fun for everyone.</p></div></div>
 <div class="modal" id="loreModal"><div class="modal-content"><button class="close-btn" onclick="closeModal('loreModal')">X</button><h2>🜂 The Abyssal Octopus 🜂</h2><p>
